# hub

./: .gitignore  CMakeLists.txt  DREAMS.org  README.md  my-func.sh  records.org
.emacs-config/: .spacemacs  .spacemacs-28  .spacemacs-28-win  .spacemacs-pi  .spacemacs.old~  README.md  folding.el  folding.elc  my-abbrev-and-expand.el  my-buffer-init.el  my-default.el  my-hooks.el  my-modes.el  my-org-config.el  myy-code-folding.el  myy-code-outline-modes.el
fun/algebra/: 04-linear-operators.tex  Makefile  mypuzzle.cls  template.tex  test.tex
lisp/: R.el  alist-to-menu.el  c-shared.el  c.el  cmake.el  cpp.el  cs.el  delete-and-handle-choice.el  do2-skl.el  el.el  go.el  hpp.el  js.el  ly.el  mp.el  org.el  ps1.el  py.el  sql.el  tex.el  ts.el  tsx.el  txt.el  vue.el  wxml.el  xml.el
lrn/: .gitignore  aws.org  docker.org  emacs.org  en.org  git.org  linux-admin.org  linux-bash.org  linux-bh.org  linux-ker-src.org  linux-multi.org  linux-network-higher.org  linux-network-lower.org  linux-network-lower2.org  linux-network-tools.org  linux-network.org  linux-packages.org  linux-snap-art.org  linux-snap-net-art.org  linux-systemd.org  linux-zsh.org  linux.org  md.org  mongo.org  network.org  out.txt  pwsh-core.org  pwsh2.org  records.org  tmp.scd  tmp.yml  virtual.org  win.org  yaml.org
lrn/LaTeX/: Align.tex  Makefile  hi.c  hi.lot  lang.txt  latex-arrangement.org  latex-core.org  latex-draw.org  latex-low.org  latex-nonlang.org  latex-pkg.org
lrn/R/: R-class.org  R-eval.org  R-lang.org  R-nonlang.org  R-pkg.org  R-tidy.org  Rgis.org  data.frame.R  hi.R  i2a.R  list.cpp  obj.R  r.cpp  rcpp-source.R  rcpp.R
lrn/ansible/: ansible.org  hi.sh  inv-me.yml  inv-nodes-and-me.yml  my-bad-inventory.yaml  my-first-inventory.yaml  my-first-playbook.yaml
lrn/c/: c.org  comp.sh  hi.sh
lrn/clash/: compose.yml  my-config.yaml  notes.sh
lrn/cpp/: .gitignore  boost.org  cpp-boost.org  cpp-boost2.org  cpp-pkg-win.org  cpp-pkg.org  cpp-pkg2.org  cpp-pkg3.org  cpp-stl.org  cpp-stl2.org  cpp.org  cpp2.org  db.txt  hangman.cpp  hi.txt  ils-nested.cpp  init-list.cpp  notes.sh  rest.ps1  rest.sh  s-hi.ps1  s-hi.sh  s.sh  strchar.c  todo.org  tup-frd.cpp  tup.cpp  words.txt
lrn/cpp/boost-higher/http_08_get/: CMakeLists.txt  m.cpp  tmp.cpp
lrn/cpp/boost-higher/http_09_client_get_post/: CMakeLists.txt  client.cpp  m.cpp  tmp.cpp
lrn/cpp/boost-higher/http_13_async_server_q2quit_pytested/: CMakeLists.txt  test_one.py
lrn/cpp/boost-higher/log_03_custom_format_pytested/: CMakeLists.txt  m.cpp  test_one.py
lrn/cpp/boost-higher/program_options_01_basic/: CMakeLists.txt  m.cpp
lrn/cpp/boost-higher/program_options_02_default_options_vector/: CMakeLists.txt  m.cpp
lrn/cpp/boost-higher/program_options_031_cmdline_config_win/: CMakeLists.txt  m.cpp
lrn/cpp/boost-higher/program_options_03_cmdline_and_config_file/hi/: CMakeLists.txt  m.cpp
lrn/cpp/boost-higher/udp_01_client/: CMakeLists.txt  clnt.cpp  serv.py
lrn/cpp/cmake/03-use-iface/: CMakeLists.txt  m.h.in
lrn/cpp/cmake/03-use-iface/mylib/: CMakeLists.txt
lrn/cpp/cmake/041-install/: CMakeLists.txt  m.cpp
lrn/cpp/cmake/041-install/mylib/: get_one.cpp
lrn/cpp/cmake/042-test/: CMakeLists.txt  t.cpp
lrn/cpp/cmake/05-cdashboard/: CMakeLists.txt  CTestConfig.cmake  hi.cpp
lrn/cpp/cmake/06-system-check/: CMakeLists.txt  hi.cpp
lrn/cpp/cmake/08-custom-command/: CMakeLists.txt  hi.cpp
lrn/cpp/cmake/08-custom-command/mylib/: CMakeLists.txt  MakeTable.cxx  get_one.cpp
lrn/cpp/cmake/09-packing-installer/: CMakeLists.txt  hi.cpp
lrn/cpp/cmake/Step1/: CMakeLists.txt
lrn/cpp/cmake/import/a_client_that_use_a_project/: CMakeLists.txt  m.cpp
lrn/cpp/cmake/import/a_project/: CMakeLists.txt  MathFunctions.cxx
lrn/cpp/cmake/import/my_cmake_lib/: CMakeLists.txt  Config.cmake.in  my_cmake_lib.cpp
lrn/cpp/cmake/import/my_cmake_lib_ex/: .#write_version.cmake  CMakeLists.txt  Config.cmake.in  my_cmake_lib.cpp  my_cmake_lib.h
lrn/cpp/cmake/import/my_cmake_lib_ex/f2/: CMakeLists.txt  f2.cpp  f2.h
lrn/cpp/cmake/import/my_cmake_lib_ex_usr/: CMakeLists.txt  m.cpp
lrn/cpp/cmake/import/my_cmake_lib_usr/: CMakeLists.txt  m.cpp
lrn/cpp/cmake/lrn-Hunter/: CMakeLists.txt  hi.cpp
lrn/cpp/hi/: CMakeLists.txt  client.cpp  m.cpp  test_one.py  weakHttpServer.hpp
lrn/cpp/test-place/: CMakeLists.txt  hi.cpp  notes.ps1  test.cpp
lrn/cs/: comp.ps1  cs-asyn-assembly.org  cs-class.org  cs-collection.org  cs-lang.org  cs-linq.org  cs-math-data.org  cs-non-lang.org
lrn/elisp/: 05-list.el  05-plist.el  06-6-ring-and-boolvec.el  06-alist.el  06-array.el  06-chartable.el  06-seq.el  06-vector.el  07-records.el  08-hashtbl.el  09-4-symbol-properties.el  09-symbol.el  10-2-quote.el  10-eval.el  11-5-loop.el  11-7-error.el  11-control.el  14-mac.el  15-1-custom.el  15-2-types.el  17-comp.el  27-11-indrct-buff.el  27-2-buff-fil-nam.el  27-5-buff-misc.el  27-9-make-kill-buff.el  27-buffer.el  cje.el  e.org  el.org  eq.el  hi.el
lrn/ethereum/: eth.org
lrn/go/: go-nonlang.org  go.org  hi.go  hi.txt  json.go
lrn/h5/: h5.org  m.html  m2.html  n.org  script.js  style.css  vue.org
lrn/js/: js.org  npm.org
lrn/ly/: .gitignore  ly.org
lrn/mp/: basic.mp  clean.sh  ctrl.mp  cur.mp  direc.mp
lrn/node/: loop.js  opr.js  timers.js  var.js
lrn/notes-tex/: .dir-locals.el  .gitignore  _region_.tex  ansible.tex  cnsss.tex  h-says.tex  h.tex  listenToOne.py  listenToOneJson.py  m.tex  openstack-01.tex  openstack-arch.tex  openstack-net.tex  openstack-setup.tex  openstack.tex  pbft.py  pbft0.py  raft.py  rsa.tex  sec-net-addr.tex  sec-net-dhcp.tex  sec-net-dns-dig.tex  sec-net-dns-update.tex  sec-net-dns.tex  sec-net-dns2.tex  sec-net-dnsmaq-dhcp.tex  tmp.txt  (+13 more)
mylib/: mylib-shared.h  mylib.h
mylib2/: CMakeLists.txt  Config.cmake.in  my_test.cpp  mylib2.cpp  mylib2.h  test.cpp  tester.cpp
scripts/: #profile.ps1#  .bash_aliases  .tmux.conf  .zsh_aliases  birthday.py  birthday.txt  cmakebuild.sh  copy-to-aws.sh  days.py  dev.ps1  dev2.ps1  got.sh  got.zsh  gpsh.sh  install.sh  my-prompt.sh  myfuncs.cmake  mylib.R  pat1.txt  profile.ps1  ses.sh  tap2.txt
(+706 files in other folders)
